(fix) Stretch the anchor element to fill up its containing list element

--- a/client/src/containers/NavBar.css
+++ b/client/src/containers/NavBar.css
@@ -57,3 +57,8 @@ li img {
 .no-cursor {
 	cursor: default !important;
 }
+
+li a {
+  display: inline-block;
+  height: 100%;
+}
